# LLMFromScratch

./: .gitignore  README.md  pyproject.toml
src/: DataLoader.py
src/Notebooks/: dataloader.ipynb  input_embeddings.ipynb  tokeniser.ipynb
