[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "LLMFromScratch"
version = "0.0.1"
description = "This project contains the utilities and functions necessary for training a Large Language Model from Scratch"
requires-python = ">=3.10"
dependencies = ["torch", "ipykernel", "tiktoken","Cython","numpy"]

[tool.setuptools]
py-modules = ["src"]
